Implement game over and game reset functions

--- a/number-guessing-game.html
+++ b/number-guessing-game.html
@@ -43,7 +43,13 @@
 
     <script>
 
-      let randomNumber = Math.floor(Math.random() * 100) + 1;
+      function getRandomNumber() {
+        let randomNumber = Math.floor(Math.random() * 100) + 1;
+        console.log('The random number is: ' + randomNumber);
+        return randomNumber;
+      }
+
+      let randomNumber = getRandomNumber();
 
       const guesses = document.querySelector('.guesses');
       const lastResult = document.querySelector('.lastResult');
@@ -87,6 +93,35 @@
       }
 
       guessSubmit.addEventListener('click', checkGuess);
+
+      function setGameOver() {
+        guessField.disabled = true;
+        guessSubmit.disabled = true;
+        resetButton = document.createElement('button');
+        resetButton.textContent = 'Start a new game';
+        document.body.append(resetButton);
+        resetButton.addEventListener('click', resetGame);
+      }
+
+      function resetGame() {
+        guessCount = 1;
+
+        const resetParas = document.querySelectorAll('.resultParas p');
+        for (const resetPara of resetParas) {
+          resetPara.textContent = '';
+        }
+
+        resetButton.parentNode.removeChild(resetButton);
+
+        guessField.disabled = false;
+        guessSubmit.disabled = false;
+        guessField.value = '';
+        guessField.focus();
+
+        lastResult.style.backgroundColor = 'white';
+
+        randomNumber = getRandomNumber();
+      }
 
     </script>
   </body>
